# Superscalar-Pipeline-Simulator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  config.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_benchmarks.py  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark-pr.yml  ci.yml
artifacts/: benchmark_results.md
benchmarks/: basic_operations.asm  benchmark1.asm  benchmark1_matrix_multiplication.asm  benchmark2_bubble_sort.asm  benchmark3_fibonacci.asm  benchmark4_memory_patterns.asm  benchmark_validation.asm  bubble_sort.asm  fibonacci_recursive.asm  matrix_multiplication.asm  memory_access_patterns.asm  simple_arithmetic.asm  simple_fibonacci.asm  simple_sort.asm  simple_test.asm  validation_suite.asm
benchmarks/integer/: dhrystone_like.asm  quicksort.asm
benchmarks/memory/: streaming_access.asm
benchmarks/mixed/: compute_intensive.asm
docs/: README.md  api_reference.md  design_document.md  installation.md  user_guide.md
examples/: README.md  advanced_pipeline_features.py  basic_simulation.py  configuration_management.py  enhanced_configuration_example.py  error_handling_example.py  error_handling_showcase.py  performance_analysis.py  profiling_example.py
src/: __init__.py  main.py
src/branch_prediction/: __init__.py  always_taken_predictor.py  base_predictor.py  bimodal_predictor.py  gshare_predictor.py  hybrid_predictor.py
src/cache/: __init__.py  cache.py  enhanced_cache.py  non_blocking_cache.py
src/config/: __init__.py  config_manager.py  config_models.py
src/data_forwarding/: __init__.py  data_forwarding_unit.py
src/exceptions/: __init__.py  simulator_exceptions.py
src/gui/: __init__.py  config_gui.py
src/performance/: __init__.py  performance_counters.py  profiler.py
src/pipeline/: __init__.py  decode_stage.py  execute_stage.py  fetch_stage.py  hazard_controller.py  issue_stage.py  issue_stage_fixed.py  memory_access_stage.py  write_back_stage.py
src/profiling/: __init__.py  benchmark_runner.py  memory_profiler.py  performance_profiler.py  power_model.py
src/register_file/: __init__.py  enhanced_register_renaming.py  register_file.py  register_renaming.py
src/utils/: __init__.py  data_cache.py  execution_engine.py  functional_unit.py  instruction.py  instruction_parser.py  reservation_station.py  scoreboard.py
src/visualization/: __init__.py  pipeline_visualizer.py
tests/: __init__.py  conftest.py  test_advanced_features.py  test_branch_prediction.py  test_branch_predictors.py  test_cache_system.py  test_complete_pipeline.py  test_data_forwarding.py  test_enhanced_features.py  test_execution_engine.py  test_hazard_detection.py  test_instruction_parser.py  test_instructions.py  test_performance_profiler.py  test_pipeline.py  test_pipeline_enhancements.py  test_pipeline_stages.py  test_power_model.py  test_register_file.py  test_register_renaming.py  test_simulator_integration.py
