[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superscalar-pipeline-simulator"
version = "1.4.0"
description = "Advanced superscalar pipeline simulator with enhanced features for computer architecture research and education"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mudit Bhargava", email = "muditbhargava66@gmail.com"}
]
maintainers = [
    {name = "Mudit Bhargava", email = "muditbhargava66@gmail.com"}
]
keywords = [
    "processor", "pipeline", "superscalar", "simulation", "computer-architecture",
    "performance-analysis", "education", "research", "branch-prediction",
    "cache-simulation", "power-modeling", "register-renaming"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24.0",  # Modern numpy with improved performance
    "matplotlib>=3.7.0",
    "pydantic>=2.0.0",  # Configuration validation and type safety
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "ruff>=0.4.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "types-PyYAML>=6.0.0",
]
visualization = [
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "plotly>=5.17.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/muditbhargava66/superscalar-pipeline-simulator"
Repository = "https://github.com/muditbhargava66/superscalar-pipeline-simulator"
Documentation = "https://github.com/muditbhargava66/superscalar-pipeline-simulator/docs"
"Bug Tracker" = "https://github.com/muditbhargava66/superscalar-pipeline-simulator/issues"

[project.scripts]
superscalar-sim = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "docs*", "benchmarks*"]

[tool.setuptools.package-data]
"src" = ["*.yaml", "*.yml", "*.json"]

# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by ruff format)
    "W293",   # blank line with whitespace (handled by ruff format)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR2004", # magic value used in comparison
    "PLW2901", # redefined loop variable
    "ARG002",  # unused method argument
    "ARG001",  # unused function argument
    "SIM108",  # use ternary operator
    "ERA001",  # commented out code
    "PLR0911", # too many return statements
    "TC001",  # type checking imports
    "TC002",  # type checking imports
    "TC003",  # type checking imports
    "PTH120",  # pathlib usage
    "PTH123",  # pathlib usage
    "UP006",   # type annotations
    "UP007",   # type annotations
    "UP035",   # deprecated typing imports (will migrate gradually)
    "PLC0415", # import outside top-level (sometimes necessary)
    "RUF059",  # unused unpacked variable (will fix gradually)
    "F821",    # undefined name (handled by mypy)
    "F401",    # unused import
    "RUF013",  # implicit optional
    "RUF012",  # mutable class attributes
    "SIM102",  # nested if statements
    "SIM103",  # return condition directly
    "SIM105",  # use contextlib.suppress
    "SIM110",  # use any/all
    "SIM113",  # use enumerate
    "C401",    # unnecessary generator
    "C408",    # unnecessary dict call
    "E722",    # bare except
    "B007",    # unused loop variable
    "RUF001",  # ambiguous unicode
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101", "ARG", "FBT"]
"main.py" = ["PLR0913", "PLR0912"]
"benchmarks/*" = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[tool.ruff.lint.mccabe]
max-complexity = 10

# MyPy configuration
[tool.mypy]
python_version = "3.10"
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = true
strict_equality = true
show_error_codes = true
ignore_errors = false
follow_imports = "silent"
allow_redefinition = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "numpy.*",
    "yaml.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gui: marks tests that require GUI",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
    "*/benchmarks/*",
    "*/docs/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# Pre-commit hooks would be configured in .pre-commit-config.yaml
